Add and style flick template

--- a/app.css
+++ b/app.css
@@ -2,3 +2,19 @@ h1 small {
     color: whitesmoke;
     font-size: 60%;
 }
+
+#flick-list {
+    margin-bottom: 0;
+}
+
+.flick-name {
+    margin: 0 0.75rem;
+}
+
+.flick .button-group {
+    margin-bottom: 0;
+}
+
+.flick .button-group .button {
+    margin-bottom: 0;
+}
